--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,38 @@
-.form {
+.App {
+  background-color: #f5f5f7;
+
+}
+
+.color-overlay {
+  height: 100%;
+  width: 100%;
+  mix-blend-mode: normal;
+}
+
+.flex-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin: 5rem;
-  background-color: #c0d0e0;
+
 }
 
-.card {
-  margin: 2rem;
-  background-color: #E7EBEF;
+.flex-item {
+  padding: 10px;
+  margin: 10px;
+  flex: 50%;
+  display: flex;
+  justify-content: center;
+
 }
-.card-title{
-  font-size: 20px;
-  margin: 8px;
-  font-weight: bold;
-  text-align: center;
-}
-span {
-  font-size: 12px;
-  padding: 3px;
+
+.error-message {
+  font-size: 13px;
   color: red;
-  display: none;
+  margin-left: 2px;
+  margin-top: 10x;
 }
 
-input:invalid~span {
-  display: block;
-}
-.toast{
-  background-color: #E7EBEF;
+@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
 }
